# multiandrent

./: .env.example  .gitignore  README.md  X社群爬蟲agent需求提詞  pyproject.toml  start.md  team.yaml  產品數據Agent規格.txt
.kiro/hooks/: lint-on-save.json  restart-team-on-edit.kiro.hook
.kiro/steering/: agent-creation.md  agent-logging.md  coding-rules.md  data-handoff.md  multi-agent-rules.md  onboarding.md  security-notes.md  structure.md  tech.md  venv-rule.md
agents/analyst-andrew/: README.md
agents/boss-predictor-agent/: README.md  boss-data.csv
agents/cha-cha-gin-agent/: README.md
agents/data-hancock/: README.md
agents/event-king/: README.md
agents/gif-finder-agent/: .env.example  README.md  VALIDATION.md
agents/kiro-cli-agent/: README.md
agents/leader-agent/: README.md
agents/monitor-anglo/: README.md
cmd/team/: go.mod  main.go
cmd/watchdog/: go.mod  main.go
config/: ports.yaml
docs/: architecture.md  create-dev-agent-guide.md  multi-agent-complete-guide.md  setup-guide.md  steering-and-rules-export.md  tutorial.md
examples/: team.yaml
scripts/: build_final_queries.py  build_schema_knowledge.py  check_multi_query.py  extract_multi_queries.py  get_ids.py  query_table_schemas.py  start-team.bat  start-team.sh  test_agent_start.py  test_kiro_subprocess.py  test_read_chunks.py  test_send_message.py  test_telegram_bot.py  test_telegram_group.py  tmp_result.txt  watchdog.py
src/kiro_multi_agent/: __init__.py  __main__.py  api.py  backend.py  cli.py  config.py  daemon.py  hoyeah_mcp.py  process.py  team.py  team_mcp.py  (+1 more)
tests/: test_config.py
(+99 files in other folders)
