[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kiro-multi-agent"
version = "0.1.0"
description = "Multi AI Agent team manager for Kiro CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Your Name"}]
keywords = ["ai", "agent", "team", "kiro", "telegram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "python-telegram-bot==21.10",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.52.0",
    "google-cloud-bigquery>=3.41.0",
    "notion-client>=3.1.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "db-dtypes>=1.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "build>=1.0"]

[project.scripts]
kiro-multi-agent = "kiro_multi_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kiro_multi_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
